# advent-of-code

./: .gitignore  Cargo.toml
2022/: Cargo.toml  README.md
2022/src/day01/: main.rs
2022/src/day02/: main.rs
2022/src/day03/: main.rs
2022/src/day04/: main.rs
2022/src/day05/: main.rs
2022/src/day06/: main.rs
2022/src/day07/: main.rs
2022/src/day08/: main.rs
2022/src/day09/: main.rs
2022/src/day10/: main.rs
2022/src/day11/: main.rs
2022/src/day12/: main.rs
2022/src/day13/: main.rs
2022/src/day14/: main.rs
2022/src/day15/: main.rs
2022/src/day16/: main.rs
2022/src/day17/: main.rs
2022/src/dayXX/: main.rs
2023/: Cargo.toml  README.md
2023/src/: utils.rs
2023/src/day01/: main.rs
2023/src/day02/: main.rs
2023/src/day03/: main.rs
2023/src/day04/: main.rs
2023/src/day05/: main.rs
2023/src/day06/: main.rs
2023/src/day07/: main.rs
2023/src/day08/: main.rs
2023/src/day09/: main.rs
